@@ -33,6 +33,8 @@ This release includes the following bugfixes:
  o curl-config --libs and libcurl.pc no longer list unnecessary dependencies
  o fixed an issue with CCC not working on some servers
  o several HTTP pipelining problems
+ o HTTP CONNECT thru a proxy is now less blocking when the multi interface is
+   used
 
 This release includes the following known bugs:
 
@@ -52,6 +54,6 @@ advice from friends like these:
  Yang Tse, Manfred Schwarb, Michael Wallner, Jeff Pohlmeyer, Shmulik Regev,
  Rob Crittenden, Robert A. Monat, Dan Fandrich, Duncan Mac-Vicar Prett,
  Michal Marek, Robson Braga Araujo, Ian Turner, Linus Nielsen Feltzing,
- Ravi Pratap
+ Ravi Pratap, Adam D. Moss
 
         Thanks! (and sorry if I forgot to mention someone)
